--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@fontsource/zen-dots": "^5.1.0",
+    "@fontsource/zen-maru-gothic": "^5.1.0",
     "astro": "^4.16.13",
     "typescript": "5.6.3"
   },
