--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@fontsource/zen-dots": "^5.1.0",
     "@fontsource/zen-maru-gothic": "^5.1.0",
     "astro": "^4.16.13",
+    "swiper": "^11.1.15",
     "typescript": "5.6.3"
   },
   "devDependencies": {
