--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fontsource/zen-dots": "^5.1.0",
     "@fontsource/zen-maru-gothic": "^5.1.0",
     "astro": "^4.16.13",
+    "gsap": "^3.12.5",
     "swiper": "^11.1.15",
     "typescript": "5.6.3"
   },
