--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fontsource/m-plus-1p": "^5.1.0",
     "@fontsource/zen-dots": "^5.1.0",
     "@fontsource/zen-maru-gothic": "^5.1.0",
+    "@octokit/core": "^6.1.2",
     "astro": "^4.16.13",
     "gsap": "^3.12.5",
     "swiper": "^11.1.15",
