--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fontsource/zen-dots": "^5.1.0",
     "@fontsource/zen-maru-gothic": "^5.1.0",
     "@octokit/core": "^6.1.2",
+    "@typescript-eslint/parser": "^8.30.1",
     "astro": "^4.16.18",
     "gsap": "^3.12.5",
     "remark-link-card": "^1.3.1",
@@ -18,10 +19,14 @@
     "@eslint/compat": "^1.2.3",
     "@eslint/js": "^9.15.0",
     "@pandacss/dev": "^0.48.0",
+    "@pandacss/eslint-plugin": "^0.2.9",
     "@types/bun": "latest",
-    "eslint": "^9.15.0",
+    "eslint": "^9.24.0",
+    "eslint-plugin-astro": "^1.3.1",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
     "globals": "^15.12.0",
     "prettier": "^3.4.1",
+    "prettier-plugin-astro": "^0.14.1",
     "typescript-eslint": "^8.16.0"
   },
   "scripts": {
