--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -37,4 +37,4 @@ jobs:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           gitHubToken: ${{ secrets.GITHUB_TOKEN }}
-          command: pages deploy dist --project-name=sosdan-web --commit-dirty=true
+          command: pages deploy dist --project-name=nito-web --commit-dirty=true
