--- a/src/content/link/x_music.yaml
+++ b/src/content/link/x_music.yaml
@@ -1,7 +1,7 @@
-name: X (日常用)
+name: X (作曲用)
 icon:
   normal: /src/assets/links/logo-black.png
   inverted: /src/assets/links/logo-white.png
-id: "@nito_008"
-link: https://x.com/@nito_008
+id: "@nito_music"
+link: https://x.com/@nito_music
 color: "#000000"
